k8s.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: cloud-simple-helloworld
  name: cloud-simple-helloworld
  namespace: default
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/cloud-simple-helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-simple-helloworld
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cloud-simple-helloworld
    spec:
      containers:
      - env:
        - name: REDIS_HOST
          value: my-redis
        image: 4admin2root/cloud-simple-helloworld:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 200
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: cloud-simple-helloworld
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 256Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloud-simple-helloworld
  name: cloud-simple-helloworld-svc
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cloud-simple-helloworld
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloud-simple-helloworld-ingress
  namespace: default
spec:
  rules:
  - host: hello-k.xzxpay.com
    http:
      paths:
      - backend:
          serviceName: cloud-simple-helloworld-svc
          servicePort: 80
        path: /
